--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@stencil/sass": "^2.0.0",
         "@stencil/store": "^2.0.1",
         "@types/jest": "^27.5.2",
+        "@types/node": "^18.11.9",
         "@typescript-eslint/eslint-plugin": "^5.42.1",
         "@typescript-eslint/parser": "^5.42.1",
         "eslint": "^8.27.0",
