--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
     "description": "FrontValue Assignment: ETomsen",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
+        "prepare": "husky install",
         "build": "stencil build",
         "start": "stencil build --dev --watch --serve",
-        "test": "stencil test --spec --e2e",
+        "test": "stencil test --spec",
         "lint": "eslint src",
-        "test.watch": "stencil test --spec --e2e --watchAll",
+        "test.watch": "stencil test --spec --watchAll",
         "generate": "stencil generate"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged pnpm lint"
+        }
     },
     "devDependencies": {
         "@ionic/core": "^6.1.14",
@@ -24,10 +30,12 @@
         "eslint": "^8.27.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.0",
         "ionicons": "^6.0.2",
         "jest": "^27.5.1",
         "jest-cli": "^27.5.1",
         "prettier": "^2.7.1",
+        "pretty-quick": "^3.1.3",
         "puppeteer": "^16.2.0",
         "typescript": "^4.8.4",
         "typescript-language-server": "^2.1.0"
